--- a/templates/example.html
+++ b/templates/example.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Втюрина Наталья. Лабораторная работа {{lab_num}}</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
 </head>
 <body>
     <header>
