--- a/templates/example.html
+++ b/templates/example.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Втюрина Наталья. Лабораторная работа {{lab_num}}</title>
+    <title>
+        {% if name %}
+            {{name}}
+        {% else %}
+            Анонимус
+        {% endif %}. 
+        Лабораторная работа {{lab_num}}
+    </title>
     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
 </head>
 <body>
     <header>
-        WEB-программирование, часть 2. Лабораторная работа {{lab_num}}
+        WEB-программирование, часть 2. {% if lab_num %}Лабораторная работа {{lab_num}}{% endif %}
     </header>
 
     <main>
@@ -20,7 +27,23 @@
     </main>
 
     <footer>
-        &copy; {{name}}, ФБИ-24, {{year_num}} курс, 2024
+        &copy; 
+        {% if name %}
+            {{name}},
+        {% else %}
+            Анонимус,
+        {% endif %}
+        {% if group %}
+            {{group}},
+        {% else %}
+            какая-то группа,
+        {% endif %}
+        {% if year_num %}
+            {{year_num}},
+        {% else %}
+            какой-то там курс,
+        {% endif %}
+        2024
     </footer>
 </body>
 </html>
