--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
     </header>
 
     <main>
+        <a href="/index">Главная страница</a>
+
         {% block main %}{% endblock %}
     </main>
 
