--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -9,7 +9,22 @@
     <div>Тема лабораторной - шаблоны. Список сделанных страниц:</div>
     <ol>
         <li>
-            <a href="/lab2/example">example</a>
+            <a href="/lab2/flowers">Цветы</a>
+        </li>
+        <li>
+            <a href="/lab2/example">Шаблон</a>
+        </li>
+        <li>
+            <a href="/lab2/filters">Фильтры</a>
+        </li>
+        <li>
+            <a href="/lab2/calc/">Вычисления</a>
+        </li>
+        <li>
+            <a href="/lab2/books">Книги</a>
+        </li>
+        <li>
+            <a href="/lab2/berries">Ягоды</a>
         </li>
     </ol>
 {% endblock %}
