--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Втюрина Наталья. {% block lab %}{% endblock %}</title>
     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
+    <link rel="icon" href="{{ url_for('static', filename='/favicon-16x16.png') }}">
+    <link rel="icon" href="{{ url_for('static', filename='/favicon-32x32.png') }}">
 </head>
 <body>
     <header>
