--- a/templates/lab3/form1.html
+++ b/templates/lab3/form1.html
@@ -9,7 +9,7 @@
         <h2>Добро пожаловать на наш сайт!</h2>
 
         <div>Ваш возраст: {{ age }}</div>
-        <div>Ваш пол: {{ sex }}</div>
+        <div>Ваш пол: {{ 'мужской' if sex == 'male' else 'женский' }}</div>
 
         <div>
             <a href="/lab3/form1">Заново</a>
