--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
     <link rel="icon" href="{{ url_for('static', filename='/favicon-16x16.png') }}">
     <link rel="icon" href="{{ url_for('static', filename='/favicon-32x32.png') }}">
+    <style>
+        main {
+            {% if request.cookies.get('color') %}
+            color: {{ request.cookies.get('color') }};
+            {% endif %}
+            {% if request.cookies.get('bgcolor') %}
+            background-color: {{ request.cookies.get('bgcolor') }};
+            {% endif %}
+            {% if request.cookies.get('fontsize') %}
+            font-size: {{ request.cookies.get('fontsize') }}px;
+            {% endif %}
+            {% if request.cookies.get('fontfamily') %}
+            font-family: {{ request.cookies.get('fontfamily') }};
+            {% endif %}
+        }
+    </style>
+    
+    
 </head>
 <body>
     <header>
