--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -17,5 +17,14 @@
         <li>
             <a href="/lab3/del_cookie">Удалить куки</a>
         </li>
+        <li>
+            <a href="/lab3/form1">Форма</a>
+        </li>
+        <li>
+            <a href="/lab3/order">Заказ напитка</a>
+        </li>
+        <li>
+            <a href="/lab3/settings">Настройки</a>
+        </li>
     </ol>
 {% endblock %}
