--- a/templates/lab2/flower.html
+++ b/templates/lab2/flower.html
@@ -14,7 +14,7 @@
     <main>
         <h1>Цветок: {{ flower.name }}</h1>
         <p>Цена: {{ flower.price }} руб.</p>
-        <p><a href="{{ url_for('all_flowers') }}">Посмотреть все цветы</a></p>
+        <p><a href="{{ url_for('lab2.all_flowers') }}">Посмотреть все цветы</a></p>
     </main>
 
     <footer>
