--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -7,7 +7,7 @@
 {% block main %}
     <h1>Формы, cookie</h1>
     <div>
-        Привет, <span style="color: {{name_color}}">{{ name }}</span>!
+        Привет, <span style="color: {{name_color}}">{{ name }}</span>! Ваш возраст: {{ age }}.
     </div>
     <div>Список сделанных страниц:</div>
     <ol>
