--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -26,5 +26,11 @@
         <li>
             <a href="/lab3/settings">Настройки</a>
         </li>
+        <li>
+            <a href="/lab3/ticket_form">Железнодорожный билет</a>
+        </li>
+        <li>
+            <a href="/lab3/clear_settings">Очистка настроек</a>
+        </li>
     </ol>
 {% endblock %}
