--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -32,5 +32,8 @@
         <li>
             <a href="/lab3/clear_settings">Очистка настроек</a>
         </li>
+        <li>
+            <a href="/lab3/product_search">Поиск товаров</a> 
+        </li>
     </ol>
 {% endblock %}
