--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -9,7 +9,7 @@
     <div>Тема лабораторной - Формы (POST). Список сделанных страниц:</div>
     <ol>
         <li>
-            <a href="">***</a>
+            <a href="/lab4/div-form">Деление</a>
         </li>
     </ol>
 {% endblock %}
