--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -11,5 +11,17 @@
         <li>
             <a href="/lab4/div-form">Деление</a>
         </li>
+        <li>
+            <a href="/lab4/sum-form">Суммирование</a>
+        </li>
+        <li>
+            <a href="/lab4/diff-form">Вычитание</a>
+        </li>
+        <li>
+            <a href="/lab4/mult-form">Умножение</a>
+        </li>
+        <li>
+            <a href="/lab4/expo-form">Возведение в степень</a>
+        </li>
     </ol>
 {% endblock %}
