--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -23,5 +23,8 @@
         <li>
             <a href="/lab4/expo-form">Возведение в степень</a>
         </li>
+        <li>
+            <a href="/lab4/tree">Садим деревья</a>
+        </li>
     </ol>
 {% endblock %}
