--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -26,5 +26,8 @@
         <li>
             <a href="/lab4/tree">Садим деревья</a>
         </li>
+        <li>
+            <a href="/lab4/login">Авторизация</a>
+        </li>
     </ol>
 {% endblock %}
