--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -5,8 +5,8 @@
 
 {# основной контент: #}
 {% block main %}
-    {%if authorized %}
-        <h1>Добро пожаловать, {{login}}!</h1>
+    {% if authorized %}
+        <h1>Добро пожаловать, {{ name }}!</h1>
         <div>
             <form action="/lab4/logout" method="post">
                 <button>Выход</button>
@@ -18,13 +18,15 @@
         <form method="post">
             <div>
                 <label for="login">Пользователь:</label>
-                <input type="text" id="login" name="login">
+                <input type="text" id="login" name="login" value="{{ login }}">
             </div>
             <div>
-                <label for="login">Пароль:</label>
+                <label for="password">Пароль:</label>
                 <input type="password" id="password" name="password">
             </div>
-            <div>{{error}}</div>
+            {% if error %}
+                <div style="color: red; font-style: italic;">{{ error }}</div>
+            {% endif %}
             <div>
                 <button type="submit">Войти</button>
                 <button type="reset">Отмена</button>
