--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -29,5 +29,8 @@
         <li>
             <a href="/lab4/login">Авторизация</a>
         </li>
+        <li>
+            <a href="/lab4/fridge">Холодильник</a>
+        </li>
     </ol>
 {% endblock %}
