--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -32,5 +32,8 @@
         <li>
             <a href="/lab4/fridge">Холодильник</a>
         </li>
+        <li>
+            <a href="/lab4/order-grain">Заказ зерна</a>
+        </li>
     </ol>
 {% endblock %}
