--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -30,6 +30,9 @@
             <a href="/lab4/login">Авторизация</a>
         </li>
         <li>
+            <a href="/lab4/registration">Регистрация</a>
+        </li>
+        <li>
             <a href="/lab4/fridge">Холодильник</a>
         </li>
         <li>
