--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -12,6 +12,9 @@
                 <button>Выход</button>
             </form>
         </div>
+        <div>
+            <a href="/lab4/users">Список пользователей</a>
+        </div>
     {% else %}
         <h1>Вход</h1>
         <h2>Пожалуйста, авторизуйтесь</h2>
@@ -32,6 +35,10 @@
                 <button type="reset">Отмена</button>
             </div>
         </form>
+        <div>
+            <a href="/lab4/registration">Зарегистрироваться</a>
+        </div>
     {% endif %}
 {% endblock %}
+
 
