--- a/static/main.css
+++ b/static/main.css
@@ -42,3 +42,40 @@ footer {
     color:#ff0000;
     font-family:Impact;
 }
+
+.nav-bar {
+    background-color: pink;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.nav-bar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+}
+
+.nav-bar ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.nav-bar ul li a {
+    color: black;
+    text-decoration: none;
+    padding: 10px 20px;
+    border: 1px solid black;
+    border-radius: 4px;
+    background-color: white;
+    transition: background-color 0.3s;
+}
+
+.nav-bar ul li a:hover {
+    background-color: #ddd;
+}
+
+h1, h2 {
+    margin: 0;
+    padding-bottom: 20px;
+}
