--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -13,7 +13,13 @@
                 <li><a href="/lab5/create">Создать статью</a></li>
                 <li><a href="/lab5/login">Войти</a></li>
                 <li><a href="/lab5/register">Регистрация</a></li>
-                <li>anonymous</li>
+                <li>
+                    {% if login %}
+                        {{login}}
+                    {% else %}
+                        anonymous
+                    {% endif %}
+                </li>
             </ul>
         </nav>
     </div>
