--- a/templates/lab5/articles.html
+++ b/templates/lab5/articles.html
@@ -7,9 +7,22 @@
 {% block main %}
     <h1> Статьи</h1>
 
-    {% for article in articles %}
-        <h2>{{ article['tittle'] }}</h2>
-        <blockquote>{{ article ['article_text'] }}</blockquote>
-    {% endfor %}
+    {% if message %}
+        <p style="color: gray; font-style: italic;">{{ message }}</p>
+    {% else %}
+        {% for article in articles %}
+            <h2>{{ article['tittle'] }}</h2>
+            <blockquote>{{ article['article_text'] }}</blockquote>
+            <div>
+                <a href="/lab5/edit/{{ article['id'] }}">Редактировать</a>
+                
+                <form action="/lab5/delete/{{ article['id'] }}" method="POST" style="display:inline;">
+                    <button type="submit" onclick="return confirm('Вы уверены, что хотите удалить эту статью?')">Удалить</button>
+                </form>
+            </div>
+        {% endfor %}
+
+    {% endif %}
 {% endblock %}
+
 
