--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -11,18 +11,16 @@
             <ul>
                 <li><a href="/lab5/list">Список статей</a></li>
                 <li><a href="/lab5/create">Создать статью</a></li>
-                <li><a href="/lab5/login">Войти</a></li>
-                <li><a href="/lab5/register">Регистрация</a></li>
-                <li>
-                    {% if login %}
-                        {{login}}
-                    {% else %}
-                        anonymous
-                    {% endif %}
-                </li>
+                {% if login %}
+                    <li>Вы вошли как {{ login }}</li>
+                    <li><a href="/lab5/logout">Выйти</a></li>
+                {% else %}
+                    <li><a href="/lab5/login">Войти</a></li>
+                    <li><a href="/lab5/register">Регистрация</a></li>
+                {% endif %}
             </ul>
         </nav>
-    </div>
+    </div>    
 {% endblock %}
 
 
