--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -14,6 +14,7 @@
                 {% if login %}
                     <li>Вы вошли как {{ login }}</li>
                     <li><a href="/lab5/logout">Выйти</a></li>
+                    <li><a href="/lab5/users">Список пользователей</a></li>
                 {% else %}
                     <li><a href="/lab5/login">Войти</a></li>
                     <li><a href="/lab5/register">Регистрация</a></li>
