--- a/static/main.css
+++ b/static/main.css
@@ -79,3 +79,56 @@ h1, h2 {
     margin: 0;
     padding-bottom: 20px;
 }
+
+blockquote {
+    font-style: italic;
+    margin: 1rem 0;
+    padding-left: 1rem;
+    border-left: 4px solid #f4d2ff;
+    color: #555555;
+}
+
+button {
+    background-color: #8500cc;
+    color: #ffffff;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #690099;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.button-row {
+    display: flex;
+    gap: 10px; /* Расстояние между кнопками */
+    align-items: center;
+}
+
+.button-row .btn {
+    padding: 5px 10px;
+    background-color: #6200ea;
+    color: white;
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.button-row .btn:hover {
+    background-color: #4500b5;
+}
+
+.button-row form {
+    margin: 0; /* Убираем отступы формы */
+}
