--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,7 @@
             {% endif %}
         }
     </style>
-    
-    
+    {% block script %}{% endblock %}    
 </head>
 <body>
     <header>
