--- a/templates/lab6/lab6.html
+++ b/templates/lab6/lab6.html
@@ -10,53 +10,61 @@
             const json = {
                 'jsonrpc': '2.0',
                 'method': 'info',
-                'id': Math.round(Math.random()*1000)
+                'id': Math.round(Math.random() * 1000)
             };
             fetch(url, {
                 method: 'POST',
-                headers: {'Content-Type': 'application/json'},
+                headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(json)
             })
-            .then(function(response){
-                return response.json()
+            .then(function (response) {
+                return response.json();
             })
-            .then(function(data) {
+            .then(function (data) {
                 const office_list = data.result;
                 const ul = document.getElementById('office-list');
-                for(let i = 0; i < office_list.length; i++) {
+                ul.innerHTML = ''; 
+                for (let i = 0; i < office_list.length; i++) {
                     const office = office_list[i];
                     const li = document.createElement('li');
                     li.innerText = `${office.number}: ${office.tenant || 'свободен '}`;
 
                     const bookingButton = document.createElement('button');
                     bookingButton.innerText = 'зарезервировать';
-                    bookingButton.onclick = function() {booking(office.number)};
+                    bookingButton.onclick = function () { booking(office.number); };
                     li.appendChild(bookingButton);
+
+                    if (office.tenant) {
+                        const cancelButton = document.createElement('button');
+                        cancelButton.innerText = 'освободить';
+                        cancelButton.onclick = function () { cancelation(office.number); };
+                        li.appendChild(cancelButton);
+                    }
 
                     ul.appendChild(li);
                 }
             });
         }
-        
+
         function booking(officeNumber) {
             const url = '/lab6/json-rpc-api/';
             const json = {
                 'jsonrpc': '2.0',
                 'method': 'booking',
                 'params': officeNumber,
-                'id': Math.round(Math.random()*1000)
+                'id': Math.round(Math.random() * 1000)
             };
-            fetch (url, {
+            fetch(url, {
                 method: 'POST',
-                headers: {'Content-Type': 'application/json'},
+                headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(json)
             })
-            .then(function(response) {
-                return response.json()
+            .then(function (response) {
+                return response.json();
             })
-            .then(function(data) {
-                if(data.error) {
-                    switch(data.error.code){
+            .then(function (data) {
+                if (data.error) {
+                    switch (data.error.code) {
                         case 1:
                             alert('Вы не авторизованы, пожалуйста, авторизуйтесь');
                             break;
@@ -67,15 +75,53 @@
                             alert('Странная ошибка');
                             break;
                     }
-                }
-                else {
+                } else {
                     document.getElementById('office-list').innerHTML = '';
                     getOfficeList();
                 }
             });
         }
 
-        document.addEventListener('DOMContentLoaded', function() {
+        function cancelation(officeNumber) {
+            const url = '/lab6/json-rpc-api/';
+            const json = {
+                'jsonrpc': '2.0',
+                'method': 'cancelation',
+                'params': officeNumber,
+                'id': Math.round(Math.random() * 1000)
+            };
+            fetch(url, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(json)
+            })
+            .then(function (response) {
+                return response.json();
+            })
+            .then(function (data) {
+                if (data.error) {
+                    switch (data.error.code) {
+                        case 1:
+                            alert('Вы не авторизованы, пожалуйста, авторизуйтесь');
+                            break;
+                        case 3:
+                            alert('Офис не арендован');
+                            break;
+                        case 4:
+                            alert('Этот офис арендован другим пользователем');
+                            break;
+                        case -32601:
+                            alert('Странная ошибка');
+                            break;
+                    }
+                } else {
+                    document.getElementById('office-list').innerHTML = '';
+                    getOfficeList();
+                }
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', function () {
             getOfficeList();
         });
     </script>
