--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -5,28 +5,68 @@
 
 {% block script %}
 <script src="{{url_for('static', filename='lab7/main.js')}}">
+<style>
+.modal {
+    display: none;
+    z-index: 100;
+    box-shadow: 3px 3px 5px black;
+    background: white;
+    width: 400px;
+    left: 50%;
+    top: 220px;
+    margin-left: -200px;
+    padding: 20px;
+    position: absolute;
+}
+</style>
 </script>
 {% endblock %}
 
 {# основной контент: #}
 {% block main %}
-<h1>Список фильмов</h1>
-<table>
-    <thead>
-        <tr>
-            <th colspan ="2">Название</th>
-            <th>Год</th>
-            <th>Дейсвтие</th>
-        </tr>
-    </thead>
-    <tbody id="film-list"></tbody>
-</table>
-<script>
-    fillFilmList();
-</script>
-<div>
-    <button onclick="addFilm()">Добавить фильм</button>
-</div>
+    <h1>Список фильмов</h1>
+    <table>
+        <thead>
+            <tr>
+                <th colspan ="2">Название</th>
+                <th>Год</th>
+                <th>Дейсвтие</th>
+            </tr>
+        </thead>
+        <tbody id="film-list"></tbody>
+    </table>
+
+    <script>
+        fillFilmList();
+    </script>
+
+    <div>
+        <button onclick="addFilm()">Добавить фильм</button>
+    </div>
+    <br>
+    <br>
+    <div class = "modal">
+        <input type = "hidden" id="id">
+        <label>
+            Название фильма на русском:
+            <input type="text" id="title_ru">
+        </label> <br>
+        <label>
+            Название фильма на оригинальном языке
+            <i>(если фильм русский, оставьте поле пустым):</i>
+            <input type="text" id="title">
+        </label> <br>
+        <label>
+            Год выпуска:
+            <input type="number" id="year">
+        </label> <br>
+        <label>
+            Описание:
+            <textarea id="description"></textarea>
+        </label> <br>
+        <button onclick="sendFilm()"> ОК </button>
+        <button onclick="cancel()">Отмена</button>
+    </div>
 {% endblock %}
 
 
