--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -5,21 +5,33 @@
 
 {% block script %}
 <script src="{{url_for('static', filename='lab7/main.js')}}">
-<style>
-.modal {
-    display: none;
-    z-index: 100;
-    box-shadow: 3px 3px 5px black;
-    background: white;
-    width: 400px;
-    left: 50%;
-    top: 220px;
-    margin-left: -200px;
-    padding: 20px;
-    position: absolute;
-}
-</style>
 </script>
+<style>
+    .modal {
+        display: none;
+        z-index: 100;
+        box-shadow: 3px 3px 5px rgb(46, 0, 0);
+        background: whitesmoke;
+        width: 400px;
+        left: 50%;
+        top: 220px;
+        margin-left: -200px;
+        position: absolute;
+        padding: 20px;
+    }
+    .modal textarea{
+        width: 100%;
+    }
+    .modal input{
+        width: 100%;
+    }
+    label{
+        font-weight: bold;
+    }
+    .error-message {
+        color: red
+    }
+</style>
 {% endblock %}
 
 {# основной контент: #}
@@ -63,7 +75,9 @@
         <label>
             Описание:
             <textarea id="description"></textarea>
+            <div id="description-error" class = "error-message"></div>
         </label> <br>
+
         <button onclick="sendFilm()"> ОК </button>
         <button onclick="cancel()">Отмена</button>
     </div>
